--- a/demo/index.html
+++ b/demo/index.html
@@ -16,11 +16,11 @@
     </style>
   </head>
   <body>
-    <div class="vertical-section-container centered">
+    <div class="vertical-section-container">
       <h3>Basic stop-note demo</h3>
       <demo-snippet>
         <template>
-          <stop-note></stop-note>
+          <stop-note chapter="5" pages="16-45"></stop-note>
         </template>
       </demo-snippet>
     </div>
