added 'section' property

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
       <h3>Basic stop-note demo</h3>
       <demo-snippet>
         <template>
-          <stop-note chapter="5" pages="16-45"></stop-note>
+          <stop-note chapter="5" pages="16-45" section="2"></stop-note>
         </template>
       </demo-snippet>
     </div>
