--- a/stop-note.html
+++ b/stop-note.html
@@ -93,7 +93,7 @@ A LRN element
       </div>
       <div class="message_wrap">
         <div class="main_message">Read the Textbook</div>
-        <div class="secondary_message">For additional information, please refer to chapter [[chapter]], pages [[pages]].</div>
+        <div class="secondary_message">For additional information, please refer to chapter [[chapter]], section [[section]], pages [[pages]].</div>
       </div>
     </div>
   </template>
@@ -121,6 +121,14 @@ A LRN element
          * The pages to be viewed.
          */
         pages: {
+          type: String,
+          value: '',
+          reflectToAttribute: true,
+        },
+        /**
+         * The section to be viewed.
+         */
+         section: {
           type: String,
           value: '',
           reflectToAttribute: true,
