changed individual properties into a slot that can have anything written in it.  Also added a margin-bottom: 20px to the element so that following content is not right up against the stop-note.

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,9 @@
       <h3>Basic stop-note demo</h3>
       <demo-snippet>
         <template>
-          <stop-note chapter="5" section="2" pages="16-45"></stop-note>
+          <stop-note>
+              <span slot="message">You can write anything you want here (Chapters, Sections, or Pages).</span>
+          </stop-note>
         </template>
       </demo-snippet>
     </div>
