added new svg icons, created variable for title / main message, and added external link functionality /  property

--- a/stop-icon.html
+++ b/stop-icon.html
@@ -4,24 +4,28 @@
 <iron-iconset-svg size="24" name="stopnoteicons">
     <svg>
         <g id="stop-icon">
-            <g id="Layer_2" data-name="Layer 2">
-                <polygon points="17.47 0.5 7.53 0.5 0.5 7.53 0.5 17.47 7.53 24.5 17.47 24.5 24.5 17.47 24.5 7.53 17.47 0.5" style="fill:#fff;stroke:#000;stroke-miterlimit:10"
-                />
-            </g>
-            <g id="Layer_1" data-name="Layer 1">
-                <polygon points="17.25 1.03 7.75 1.03 1.03 7.75 1.03 17.25 7.75 23.97 17.25 23.97 23.97 17.25 23.97 7.75 17.25 1.03" style="fill:#d00"
-                />
-            </g>
-            <g id="Layer_3" data-name="Layer 3">
-                <text x="0.32" y="0.04"></text>
-                <path d="M1.86,13.21,3,13.07q.19,1.32,1.23,1.32A1.18,1.18,0,0,0,5,14.12a.88.88,0,0,0,.29-.66.68.68,0,0,0-.42-.67,9.24,9.24,0,0,0-1-.36A3.62,3.62,0,0,1,2.8,12a1.94,1.94,0,0,1-.54-.68,2.12,2.12,0,0,1-.2-.9,2.06,2.06,0,0,1,.26-1A1.72,1.72,0,0,1,3,8.67a2.46,2.46,0,0,1,1.11-.23A2.14,2.14,0,0,1,5.7,9a2.17,2.17,0,0,1,.59,1.55l-1.14.06a1.18,1.18,0,0,0-.33-.77,1,1,0,0,0-.71-.22,1.15,1.15,0,0,0-.71.19.61.61,0,0,0,0,1,3.12,3.12,0,0,0,1,.42,4.13,4.13,0,0,1,1.24.53,1.78,1.78,0,0,1,.59.71,2.55,2.55,0,0,1,.2,1A2.16,2.16,0,0,1,5.9,15a2.22,2.22,0,0,1-1.73.61C2.79,15.57,2,14.78,1.86,13.21Z"
-                    transform="translate(0.32 0.04)" style="fill:#fff" />
-                <path d="M8.68,15.45V9.73H7V8.56h4.48V9.73H9.82v5.72Z" transform="translate(0.32 0.04)" style="fill:#fff" />
-                <path d="M11.87,12.05a5,5,0,0,1,.36-2,2.75,2.75,0,0,1,.95-1.19,2.53,2.53,0,0,1,1.43-.39,2.44,2.44,0,0,1,2,.93A4.05,4.05,0,0,1,17.35,12a4.1,4.1,0,0,1-.81,2.7,2.38,2.38,0,0,1-1.93.86,2.39,2.39,0,0,1-1.94-.85A4.11,4.11,0,0,1,11.87,12.05ZM13,12a3,3,0,0,0,.45,1.79,1.36,1.36,0,0,0,2.24,0A3.05,3.05,0,0,0,16.17,12a2.92,2.92,0,0,0-.43-1.77,1.33,1.33,0,0,0-1.13-.58,1.37,1.37,0,0,0-1.13.58A3,3,0,0,0,13,12Z"
-                    transform="translate(0.32 0.04)" style="fill:#fff" />
-                <path d="M18.24,15.45V8.56h1.83a5.33,5.33,0,0,1,1.34.1,1.51,1.51,0,0,1,.83.68,2.5,2.5,0,0,1,.33,1.35,2.54,2.54,0,0,1-.28,1.25,1.67,1.67,0,0,1-.71.71,3.78,3.78,0,0,1-1.45.2h-.75v2.6Zm1.14-5.72v2H20a2.71,2.71,0,0,0,.86-.09.79.79,0,0,0,.38-.32,1.23,1.23,0,0,0,0-1.16.73.73,0,0,0-.37-.31,3.18,3.18,0,0,0-.94-.08Z"
-                    transform="translate(0.32 0.04)" style="fill:#fff" />
-            </g>
+            <polygon points="16.59 0.54 7.07 0.54 0.33 7.28 0.33 16.81 7.07 23.54 16.59 23.54 23.33 16.81 23.33 7.28 16.59 0.54" style="fill:#fff;stroke:#000;stroke-miterlimit:10;stroke-width:0.25px"
+            />
+            <polygon points="16.2 1.5 7.46 1.5 1.29 7.68 1.29 16.41 7.46 22.58 16.2 22.58 22.37 16.41 22.37 7.68 16.2 1.5" style="fill:#d8261c"
+            />
+            <path d="M2.93,12.39l1-.11C4,13,4.35,13.42,5,13.42a1,1,0,0,0,.7-.23.77.77,0,0,0,.26-.58.65.65,0,0,0-.09-.35A.69.69,0,0,0,5.55,12a8.28,8.28,0,0,0-.89-.3,3.07,3.07,0,0,1-.92-.42,1.56,1.56,0,0,1-.46-.58,1.87,1.87,0,0,1,.05-1.66,1.48,1.48,0,0,1,.61-.58,2.13,2.13,0,0,1,1-.2,1.85,1.85,0,0,1,1.34.46,1.9,1.9,0,0,1,.51,1.34l-1,.05a1.07,1.07,0,0,0-.27-.67.9.9,0,0,0-.62-.19,1,1,0,0,0-.61.17.49.49,0,0,0-.21.41.52.52,0,0,0,.19.41,2.75,2.75,0,0,0,.9.36,3.87,3.87,0,0,1,1.07.45,1.51,1.51,0,0,1,.5.62,2,2,0,0,1,.18.9,1.85,1.85,0,0,1-.48,1.3,1.88,1.88,0,0,1-1.49.53C3.73,14.43,3.06,13.75,2.93,12.39Z"
+                style="fill:#fff" />
+            <path d="M8.81,14.33V9.4H7.37v-1h3.86v1H9.79v4.93Z" style="fill:#fff" />
+            <path d="M11.55,11.4a4.21,4.21,0,0,1,.32-1.75,2.31,2.31,0,0,1,.82-1,2.14,2.14,0,0,1,1.23-.34,2.09,2.09,0,0,1,1.7.8,3.47,3.47,0,0,1,.66,2.27,3.52,3.52,0,0,1-.7,2.33,2.05,2.05,0,0,1-1.66.74,2.06,2.06,0,0,1-1.67-.73A3.53,3.53,0,0,1,11.55,11.4Zm1,0A2.5,2.5,0,0,0,13,12.89a1.15,1.15,0,0,0,1.92,0,2.56,2.56,0,0,0,.39-1.56,2.53,2.53,0,0,0-.38-1.53,1.15,1.15,0,0,0-1-.5,1.16,1.16,0,0,0-1,.5A2.51,2.51,0,0,0,12.57,11.36Z"
+                style="fill:#fff" />
+            <path d="M17.05,14.33V8.39h1.58a4.52,4.52,0,0,1,1.15.09,1.3,1.3,0,0,1,.72.58,2.14,2.14,0,0,1,.28,1.16,2.21,2.21,0,0,1-.24,1.08,1.38,1.38,0,0,1-.61.61,3.09,3.09,0,0,1-1.26.18H18v2.24ZM18,9.4v1.68h.54a2.5,2.5,0,0,0,.75-.07.66.66,0,0,0,.32-.28.85.85,0,0,0,.13-.49,1,1,0,0,0-.13-.5.7.7,0,0,0-.32-.28,3.41,3.41,0,0,0-.81-.06Z"
+                style="fill:#fff" />
+        </g>
+        <g id="warning-icon">
+            <polygon points="11.8 22.5 23.06 3 0.55 3 11.8 22.5" style="fill:#fff;stroke:#000;stroke-miterlimit:10;stroke-width:0.25px"
+            />
+            <polygon points="11.8 20.38 21.33 3.88 2.28 3.88 11.8 20.38" style="fill:#ffeb3b" />
+            <text transform="translate(9.89 15.38)" style="font-size:14px;font-family:ArialNarrow-Bold, Arial Narrow;font-weight:700">!</text>
+        </g>
+        <g id="confirm-icon">
+            <circle cx="12.11" cy="12.53" r="11" style="fill:#fff;stroke:#000;stroke-width:0.25px" />
+            <circle cx="12.11" cy="12.53" r="10" style="fill:#81c784" />
+            <polygon points="8.37 16 5.48 12.63 4.54 13.44 7.43 16.81 8.4 17.93 9.34 17.13 19.68 8.26 18.71 7.13 8.37 16" />
         </g>
     </svg>
 </iron-iconset-svg>
