--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
       <h3>Basic stop-note demo</h3>
       <demo-snippet>
         <template>
-          <stop-note>
+          <stop-note url="https://www.google.com">
               <span slot="message">You can write anything you want here (Chapters, Sections, or Pages).</span>
           </stop-note>
         </template>
