--- a/stop-note.html
+++ b/stop-note.html
@@ -28,6 +28,18 @@ A LRN element
         margin-bottom: 20px;
       }
 
+      :host[icon="stopnoteicons:stop-icon"] {
+        --accent-color: #d8261c;
+      }
+
+      :host[icon="stopnoteicons:warning-icon"] {
+        --accent-color: #ffeb3b;
+      }
+
+      :host[icon="stopnoteicons:confirm-icon"] {
+        --accent-color: #81c784;
+      }
+
       .container {
         display: flex;
         width: auto;
@@ -85,7 +97,7 @@ A LRN element
     <div class="container">
       <div class="svg_wrap">
         <div class="svg">
-          <iron-icon icon="stopnoteicons:stop-icon"></iron-icon>
+          <iron-icon icon="[[icon]]"></iron-icon>
         </div>
       </div>
       <div class="message_wrap">
@@ -123,6 +135,15 @@ A LRN element
          * url to additional resources
          */
         url: {
+          type: String,
+          value: '',
+          reflectToAttribute: true,
+        },
+
+        /**
+         * Icon selected
+         */
+        icon: {
           type: String,
           value: '',
           reflectToAttribute: true,
