--- a/demo/index.html
+++ b/demo/index.html
@@ -19,6 +19,16 @@
 
 <body>
   <div class="vertical-section-container">
+    <h3>Basic stop-note demo: Default</h3>
+    <demo-snippet>
+      <template>
+        <stop-note>
+          <span slot="message">You can write anything you want here (Chapters, Sections, or Pages).</span>
+        </stop-note>
+      </template>
+    </demo-snippet>
+  </div>
+  <div class="vertical-section-container">
     <h3>Basic stop-note demo: Stop</h3>
     <demo-snippet>
       <template>
