adjusted demo and finalized fixes for issues #1

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,10 +29,10 @@
     </demo-snippet>
   </div>
   <div class="vertical-section-container">
-    <h3>Basic stop-note demo: Stop</h3>
+    <h3>Basic stop-note demo: URL</h3>
     <demo-snippet>
       <template>
-        <stop-note url="https://www.google.com" icon="stopnoteicons:stop-icon">
+        <stop-note url="https://www.google.com">
           <span slot="message">You can write anything you want here (Chapters, Sections, or Pages).</span>
         </stop-note>
       </template>
