adjusting HAX settings

--- a/stop-note.html
+++ b/stop-note.html
@@ -179,18 +179,60 @@ A LRN element
           'settings': {
             'quick': [
               {
+                'property': 'icon',
+                'title': 'Icon',
+                'description': 'Enter icon for stop-note.',
+                'inputMethod': 'textfield',
+                'required': true,
+              },
+              {
+                'property': 'title',
+                'title': 'Title',
+                'description': 'Enter title for stop-note.',
+                'inputMethod': 'textfield',
+                'required': true,
+              },
+              {
+                'property': 'url',
+                'title': 'URL',
+                'description': 'Enter an external url.',
+                'inputMethod': 'textfield',
+                'required': true,
+              },
+              {
                 'slot': 'message',
                 'title': 'Message',
-                'description': 'This is where you enter a message for stop-note.',
+                'description': 'Enter a message for stop-note.',
                 'inputMethod': 'code-editor',
                 'required': true,
               },
             ],
             'configure': [
               {
+                'property': 'icon',
+                'title': 'Icon',
+                'description': 'Enter icon for stop-note.',
+                'inputMethod': 'textfield',
+                'required': true,
+              },
+              {
+                'property': 'title',
+                'title': 'Title',
+                'description': 'Enter title for stop-note.',
+                'inputMethod': 'textfield',
+                'required': true,
+              },
+              {
+                'property': 'url',
+                'title': 'URL',
+                'description': 'Enter an external url.',
+                'inputMethod': 'textfield',
+                'required': true,
+              },
+              {
                 'slot': 'message',
                 'title': 'Message',
-                'description': 'This is where you enter a message for stop-note.',
+                'description': 'Enter a message for stop-note.',
                 'inputMethod': 'code-editor',
                 'required': true,
               },
