--- a/stop-note.html
+++ b/stop-note.html
@@ -27,7 +27,7 @@ A LRN element
         --accent-color: #d32f2f;
         margin-bottom: 20px;
       }
-      
+
       iron-icon {
         height: 100px;
         width: 100px;
@@ -220,6 +220,17 @@ A LRN element
                 'description': 'Enter a message for stop-note.',
                 'inputMethod': 'code-editor',
                 'required': true,
+              },
+              {
+                'property': 'icon',
+                'title': 'Action Icon',
+                'description': 'Icon used for stop-note',
+                'inputMethod': 'iconpicker',
+                'options': [
+                  'stopnoteicons:stop-icon',
+                  'stopnoteicons:warning-icon',
+                  'stopnoteicons:confirm-icon',
+                ],
               },
             ],
             'advanced': [
