added function to update styles according to icon selected in HAX

--- a/stop-note.html
+++ b/stop-note.html
@@ -150,9 +150,23 @@ A LRN element
           reflectToAttribute: true,
         },
       },
+
+      observers: [
+        '_iconChanged(icon)'
+      ],
+
+      /**
+       * Update styles based on icon selected.
+       */
+
+      _iconChanged: function (icon) {
+        this.updateStyles();
+      },
+      
       /**
        * Attached to the DOM, now fire.
        */
+
       attached: function () {
         // Establish hax property binding
         let props = {
