--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,7 @@
     <h3>Basic stop-note demo: URL</h3>
     <demo-snippet>
       <template>
-        <stop-note url="/demo">
+        <stop-note url="https://www.google.com">
           <span slot="message">You can write anything you want here (Chapters, Sections, or Pages).</span>
         </stop-note>
       </template>
