--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
     <demo-snippet>
       <template>
         <stop-note>
-          <span slot="message">You can write any error message you want here.</span>
+          <span slot="message">You can write any message you want here.</span>
         </stop-note>
       </template>
     </demo-snippet>
@@ -32,7 +32,7 @@
     <h3>Basic stop-note demo: URL</h3>
     <demo-snippet>
       <template>
-        <stop-note title="Error" url="https://www.google.com">
+        <stop-note title="Error Message" url="https://www.google.com">
           <span slot="message">You can write any error message you want here.</span>
         </stop-note>
       </template>
