reworded HAX description

--- a/stop-note.html
+++ b/stop-note.html
@@ -203,7 +203,7 @@ A LRN element
           'canEditSource': false,
           'gizmo': {
             'title': 'Stop Note',
-            'description': 'A message to alert readers to specific chapters / pages in textbook.',
+            'description': 'A message to alert readers to specific directions.',
             'icon': 'icons:report',
             'color': 'orange',
             'groups': ['Video', 'Media'],
